kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/no_clash_because_priv/src/priv_export2/mod.k
mod sub;
pub(pack) use sub.*;

let foo_to_bar = fun _(_: Foo): Bar {
    Bar.c
};
