kanc/src/tests/sample_code/should_fail/single_file/type_check/type_mismatch/wrong_empty.k
type Empty1 {}
type Empty2 {}

let wrong_empty = fun _(e1: Empty1): Empty2 { e1 };
